fix: correct List.of(Block.EMPTY_ARRAY) misuse in CollisionHelper and Entity